# synacor

./: Cargo.toml  LICENSE  README.md  arch-spec  grid_solution.txt  instruction.rs.bak  output.asm  replay.txt  stack.yaml  synacor-grid.cabal  the_eigth_register.txt
examples/brute_forcer/: main.rs
examples/debugger/: command.rs  debugger.rs  main.rs
grid-src/: Main.hs
src/: cpu.rs  debugger.rs  instruction.rs  lib.rs  main.rs  syn_int.rs
src/cpu/: data.rs  injection.rs  instruction.rs  mod.rs  status.rs  syn_int.rs
src/debugger/: command.rs  debugger.rs  macros.rs  mod.rs
src/disassembler/: main.rs
src/vm/: main.rs
