[package]
name = "synacor"
version = "0.1.0"
authors = ["Willam Woodhead <william.woodhead@lux01.co.uk>"]

[lib]
path = "src/lib.rs"
name = "synacor"

[[bin]]
name = "debugger"
path = "src/debugger/main.rs"

[[bin]]
name = "disassembler"
path = "src/disassembler/main.rs"

[[bin]]
name = "brute_forcer"
path = "src/brute_forcer/main.rs"

[dependencies]
byteorder = "^1.0"
libc = "^0.2"
termion = "^1.1"
chan = "^0.1"
chan-signal = "^0.2"

[dev-dependencies]
libc = "^0.2"