name:                synacor-grid
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lux01/synacor
license:             MIT
license-file:        LICENSE
author:              William Woodhead
maintainer:          william.woodhead@lux01.co.uk
copyright:           2017 William Woodhead
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable synacor-grid
  hs-source-dirs:      grid-src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
